--- a/src/app/gmail/components/inbox/inbox.component.html
+++ b/src/app/gmail/components/inbox/inbox.component.html
@@ -1,2 +1,2 @@
 
-<img src="../../../../assets/images/blank_inbox_email.webp" alt="image">
+<img src="../../../../assets/images/blank_inbox_email.webp" alt="inbox">
